# open-agent-orchestrator

./: .gitignore  Current State Evaluation (v8 Level).md  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
blog/: agent-governance.md  deterministic-ai-execution.md  replayable-pipelines.md
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: Timeline.tsx
demos/: deterministic_replay.py  failure_prevention.py
docs/: architecture.md  deployment.md  execution_guarantees.md  replay_contract.md
examples/: api_test_client.py  async_example.py  basic_run.py  dag_example.py  distributed_example.py  multi_agent_example.py
oao/: __init__.py  api_models.py  cli.py  metrics.py  server.py  telemetry.py  worker.py
oao-dashboard/: index.html  package-lock.json  package.json
oao-dashboard/src/: App.jsx
oao-dashboard/src/components/: MultiAgent.jsx  ReportCard.jsx  RunAgent.jsx
oao/adapters/: base_adapter.py  langchain_adapter.py  langgraph_adapter.py  registry.py
oao/adapters/langchain/: callbacks.py  memory.py
oao/plugins/: base.py  loader.py  sample_plugin.py
oao/policy/: registry.py  strict_policy.py
oao/protocol/: message.py  report.py
oao/runtime/: agent_factory.py  context.py  dag.py  default_logger.py  distributed_scheduler.py  event_bus.py  event_store.py  events.py  execution.py  hashing.py  multi_agent.py  orchestrator.py  persistence.py  recovery.py  resilience.py  scheduler.py  state_machine.py  tool_wrapper.py  worker_node.py
tests/: benchmark_runtime.py  demo_dashboard.py  test_dag.py  test_determinism.py  test_distributed_scheduler.py  test_durable_dag.py  test_event_store.py  test_execution_model.py  test_hash_integration.py  test_hashing.py  test_idempotency.py  test_langchain_integration.py  test_langgraph_integration.py  test_orchestrator.py  test_orchestrator_integration.py  test_policy.py  test_policy_enforcement.py  test_recovery.py  test_resilience.py  test_resiliency.py  test_retry_integration.py  test_scheduler.py  test_secure_plugins.py  test_simulation.py  test_state_machine.py  test_telemetry.py  test_token_budget.py  verify_telemetry.py  verify_ws_stream.py
