[project]
name = "open-agent-orchestrator"
version = "1.0.0"
description = "Control plane for AI agents"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic>=2.0",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.22"
]

langchain = [
    "langchain>=0.1"
]

distributed = [
    "redis>=5.0.0"
]

all = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
]
